@@ -20,7 +20,7 @@ extern "C" {
 #define SC_MANAGER_LOCK	8
 #define SC_MANAGER_QUERY_LOCK_STATUS	16
 #define SC_MANAGER_MODIFY_BOOT_CONFIG	32
-#define SERVICE_NO_CHANGE	(-1)
+#define SERVICE_NO_CHANGE 0xffffffff
 #define SERVICE_STOPPED	1
 #define SERVICE_START_PENDING	2
 #define SERVICE_STOP_PENDING	3
